--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobo - Desenvolvedor e Dsigner</title>
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <img src="img/marca.svg" alt="Lobo">
 
         <nav>
-            <ul>
+            <ul class="header-menu">
                 <li>
                     <a href="#experiencia">Experiência</a>
                 </li>
