--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
             </ul>
         </nav>
     </header>
+
+    <main class="introduction">
+        <img src="./img/perfil.jpg" alt="Lobo Cinza">
+        <div>
+            <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
+            <p>Localizado no Rio de Janeiro</p>
+        </div>
+    </main>
+
+
 </body>
 
 </html>
