estrutura html do site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul class="header-menu">
                 <li>
-                    <a href="#experiencia">Experiência</a>
+                    <a href="#experience">Experiência</a>
                 </li>
                 <li>
                     <a href="#formacao">Formação</a>
@@ -35,6 +35,18 @@
             <p>Localizado no Rio de Janeiro</p>
         </div>
     </main>
+
+    <section class="experience" id="experience" aria-label="experience">
+        <h2 class="sub-title">Experiência</h2>
+        <div>
+            <p class="experience-text">Desenvolvo pequenos projetos como o BikCraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trablhei no <strong>UX</strong> e <strong>UI Design</strong>                do projeto.
+            </p>
+
+            <div class="enterprise">
+
+            </div>
+        </div>
+    </section>
 
 
 </body>
