--- a/index.html
+++ b/index.html
@@ -42,7 +42,51 @@
             <p class="experience-text">Desenvolvo pequenos projetos como o BikCraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trablhei no <strong>UX</strong> e <strong>UI Design</strong>                do projeto.
             </p>
 
-            <div class="enterprise">
+            <div class="company">
+
+                <span class="company-year">2045</span>
+                <h3 class="company-title">Bikcraft</h3>
+                <span class="company-title">Desenvolvedor Júnior</span>
+                <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+
+                <ul class="skills company">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>UX Design</li>
+                    <li>UI Design</li>
+                </ul>
+
+            </div>
+
+            <div class="company">
+
+                <span class="company-year">2044-45</span>
+                <h3 class="company-title">Surfbot</h3>
+                <span class="company-title">Estagiário</span>
+                <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+
+                <ul class="skills company">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+
+            </div>
+
+            <div class="company">
+
+                <span class="company-year">2044</span>
+                <h3 class="company-title">Brafé</h3>
+                <span class="company-title">Desenvolvedor Júnior</span>
+                <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+
+                <ul class="skills company">
+                    <li>Email</li>
+                    <li>HTML</li>
+                    <li>UX Design</li>
+                    <li>UI Design</li>
+                </ul>
 
             </div>
         </div>
