criando parte de experiencia

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
 
-    <main class="introduction">
+    <main class="container introduction">
         <img src="./img/perfil.jpg" alt="Lobo Cinza">
         <div>
             <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
@@ -36,7 +36,7 @@
         </div>
     </main>
 
-    <section class="experience" id="experience" aria-label="experience">
+    <section class="container experience" id="experience" aria-label="experience">
         <h2 class="sub-title">Experiência</h2>
         <div>
             <p class="experience-text">Desenvolvo pequenos projetos como o BikCraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trablhei no <strong>UX</strong> e <strong>UI Design</strong>                do projeto.
