--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <span class="company-title">Estagiário</span>
                 <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
 
-                <ul class="skills company">
+                <ul class="skills-company">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
@@ -88,6 +88,56 @@
                     <li>UI Design</li>
                 </ul>
 
+            </div>
+        </div>
+    </section>
+
+    <section class="formation" id="formation" aria-label="formation">
+        <div class="formation-container">
+            <h2 class="sub-title">Formação</h2>
+
+            <div>
+                <p class="formation-text">
+                    Minha mais recente experiência acadênica foi o <strong>mestrado</strong>que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
+                </p>
+
+                <ul class="college-list">
+                    <li class="college">
+                        <span class="college-type">Bacharel</span>
+                        <h3 class="college-course">Engenharia da Computação</h3>
+                        <span class="college-institution">UVA</span>
+                    </li>
+
+                    <li class="college">
+                        <span class="college-type">Tecnólogo</span>
+                        <h3 class="college-course">Técnico Mêcanica</h3>
+                        <span class="college-institution">IFRJ</span>
+                    </li>
+
+                    <li class="college">
+                        <span class="college-type">Fundamental</span>
+                        <h3 class="college-course">Normal</h3>
+                        <span class="college-institution">CEAS</span>
+                    </li>
+                </ul>
+
+                <div class="formation-extra">
+                    <div class="course">
+                        <h3>Cursos Intensivos</h3>
+                        <ul>
+                            <li>UX Designer & UI Designer <span>56h</span> </li>
+                            <li>Front-end Desenvolvedor <span>72h</span> </li>
+                        </ul>
+                    </div>
+
+                    <div class="languages">
+                        <h3>Idiomas</h3>
+                        <ul>
+                            <li>Inglês <span>Avançado</span> </li>
+                            <li>Português <span>Nativo</span> </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
