--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <span class="company-title">Desenvolvedor Júnior</span>
                 <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
 
-                <ul class="skills company">
+                <ul class="skills-company">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
@@ -81,7 +81,7 @@
                 <span class="company-title">Desenvolvedor Júnior</span>
                 <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
 
-                <ul class="skills company">
+                <ul class="skills-company">
                     <li>Email</li>
                     <li>HTML</li>
                     <li>UX Design</li>
