esqueleto do footer completo

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section class="formation" id="formation" aria-label="formation">
+    <section class="formation" id="formacao" aria-label="formation">
         <div class="formation-container">
             <h2 class="sub-title">Formação</h2>
 
@@ -142,6 +142,23 @@
         </div>
     </section>
 
+    <footer class="footer" id="contato">
+        <div class="footer-container">
+            <p class="footer-text">
+                Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa
+            </p>
+
+            <ul class="footer-contact">
+                <li>exemplo@gmail.com</li>
+                <li>exemplo@gmail.com</li>
+                <li>exemplo@gmail.com</li>
+            </ul>
+
+            <p class="footer-copy">
+                Lobo. Alguns direitos reservados
+            </p>
+        </div>
+    </footer>
 
 </body>
 
