--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobo - Desenvolvedor e Dsigner</title>
+    <meta name="descripton" content="Desenvolvo pequenos projetos como o BikCraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs eu trablhei no UX e UI Design do projeto.">
     <!--CSS-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
