correção de erro (escrita)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <ul class="skills-company">
                     <li>HTML</li>
-                    <li>CS</li>
+                    <li>CSS</li>
                     <li>JavaScript</li>
                 </ul>
 
