--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lobo - Desenvolvedor e Dsigner</title>
-    <meta name="descripton" content="Desenvolvo pequenos projetos como o BikCraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs eu trablhei no UX e UI Design do projeto.">
+    <title>Meu Portfólio</title>
+    <meta name="descripton" content="Estou trabalhando como PJ por volta de 1 ano, trabalho em cima de sistemas voltados para escolas usando laravel, e também atuo em projetos de sistemas organizacionais usando totalmente meus conhecimentos voltados para Front end e Back end.">
     <!--CSS-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header class="header">
-        <img src="img/marca.svg" alt="Lobo">
+    <header class="header header-bg">
+        <div class="logo">Port<span>fólio</span></div>
 
         <nav>
             <ul class="header-menu">
@@ -30,66 +30,55 @@
     </header>
 
     <main class="container introduction">
-        <img src="./img/perfil.jpg" alt="Lobo Cinza">
+        <img class="photo" src="./img/Foto-Banner.jfif" alt="Lobo Cinza">
         <div>
-            <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
-            <p>Localizado no Rio de Janeiro</p>
+            <h1>Desenvolvedor<br>Back End | Front End</h1>
+            <div>
+                <p>Prazer me chamo <span class="color"><strong>Mizael</strong></span> e sou <span class="typing"></span>
+                </p>
+            </div>    
         </div>
     </main>
 
     <section class="container experience" id="experience" aria-label="experience">
         <h2 class="sub-title">Experiência</h2>
         <div>
-            <p class="experience-text">Desenvolvo pequenos projetos como o BikCraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trablhei no <strong>UX</strong> e <strong>UI Design</strong>                do projeto.
+            <p class="experience-text">Estou trabalhando como PJ por volta de 1 ano, trabalho em cima de sistemas voltados para escolas usando laravel, e também atuo em projetos de sistemas organizacionais usando totalmente meus conhecimentos voltados para <strong>Front end e Back end.</strong>
             </p>
 
             <div class="company">
 
-                <span class="company-year">2045</span>
-                <h3 class="company-title">Bikcraft</h3>
-                <span class="company-title">Desenvolvedor Júnior</span>
-                <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+                <span class="company-year">2022</span>
+                <h3 class="company-title">Polícia Federal</h3>
+                <span class="company-title">Estágio TI</span>
+                <p class="company-text">No estágio na Polícia Federal trabalho desenvolvendo software de aplicação <strong>Microsoft</strong>, compreendendo quaisquer necessidade do edifício agregando meu conhecimento juntamente ao <strong>AEDI/SR/PF/RJ.</strong></p>
 
                 <ul class="skills-company">
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>UX Design</li>
-                    <li>UI Design</li>
+                    <li>SQL Server</li>
+                    <li>Power Automate</li>
+                    <li>Power BI</li>
                 </ul>
 
             </div>
 
             <div class="company">
 
-                <span class="company-year">2044-45</span>
-                <h3 class="company-title">Surfbot</h3>
-                <span class="company-title">Estagiário</span>
-                <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
-
+                <span class="company-year">2021</span>
+                <h3 class="company-title">Oliver Soft</h3>
+                <span class="company-title">Desenvolvedor Full-Stack</span>
+                <p class="company-text">Atuo em dois projetos voltados para sistemas educacionais e sistemas organizacionais.</p>
                 <ul class="skills-company">
-                    <li>HTML</li>
-                    <li>CSS</li>
+                    <li>PHP</li>
+                    <li>SQL Server</li>
+                    <li>MySQL</li>
                     <li>JavaScript</li>
+                    <li>JQuery</li>
                 </ul>
 
             </div>
 
-            <div class="company">
-
-                <span class="company-year">2044</span>
-                <h3 class="company-title">Brafé</h3>
-                <span class="company-title">Desenvolvedor Júnior</span>
-                <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
-
-                <ul class="skills-company">
-                    <li>Email</li>
-                    <li>HTML</li>
-                    <li>UX Design</li>
-                    <li>UI Design</li>
-                </ul>
-
-            </div>
         </div>
     </section>
 
@@ -99,26 +88,20 @@
 
             <div>
                 <p class="formation-text">
-                    Minha mais recente experiência acadênica foi o <strong>mestrado</strong>que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
+                    Minha mais recente experiência profissional está sendo na <strong>Polícia Federal</strong>, juntamente com a minha expêriencia acadêmica que está sendo no ensino tecnológico como <strong>Analista de Sistemas</strong>.
                 </p>
 
                 <ul class="college-list">
                     <li class="college">
-                        <span class="college-type">Bacharel</span>
-                        <h3 class="college-course">Engenharia da Computação</h3>
-                        <span class="college-institution">UVA</span>
+                        <span class="college-type">Ensino Superior</span>
+                        <h3 class="college-course">Análise Desenvolvimento de Sistemas</h3>
+                        <span class="college-institution">Estácio</span>
                     </li>
 
                     <li class="college">
-                        <span class="college-type">Tecnólogo</span>
-                        <h3 class="college-course">Técnico Mêcanica</h3>
-                        <span class="college-institution">IFRJ</span>
-                    </li>
-
-                    <li class="college">
-                        <span class="college-type">Fundamental</span>
-                        <h3 class="college-course">Normal</h3>
-                        <span class="college-institution">CEAS</span>
+                        <span class="college-type">Ensino Médio Técnico</span>
+                        <h3 class="college-course">Mecatrônica</h3>
+                        <span class="college-institution">CETT</span>
                     </li>
                 </ul>
 
@@ -126,15 +109,17 @@
                     <div class="course">
                         <h3>Cursos Intensivos</h3>
                         <ul>
-                            <li>UX Designer & UI Designer <span>56h</span> </li>
-                            <li>Front-end Desenvolvedor <span>72h</span> </li>
+                            <li>Linguagem de Programação Java - Avançado <span>21h</span> </li>
+                            <li>Segurança em Tecnologica da Informação <span>12h</span> </li>
+                            <li>It Essentials - Cisco Networking Academy <span>70h</span> </li>
+                            <li>Análise de Dados no Power BI <span>4h</span> </li>
                         </ul>
                     </div>
 
                     <div class="languages">
                         <h3>Idiomas</h3>
                         <ul>
-                            <li>Inglês <span>Avançado</span> </li>
+                            <li>Inglês <span>Básico</span> </li>
                             <li>Português <span>Nativo</span> </li>
                         </ul>
                     </div>
@@ -146,21 +131,31 @@
     <footer class="footer" id="contato">
         <div class="footer-container">
             <p class="footer-text">
-                Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa
+                Aqui ao lado tem algumas formas de você entrar em contato comigo, pode me chamar em qualquer um desses endereços.
             </p>
 
             <ul class="footer-contact">
-                <li>exemplo@gmail.com</li>
-                <li>exemplo@gmail.com</li>
-                <li>exemplo@gmail.com</li>
+                <li>(21) 99713-0130</li>
+                <li>mizaelima275@gmail.com</li>
+                <li>linkedin.com/in/mizaelima275/</li>
+                <li>github.com/mizaelima275</li>
             </ul>
 
             <p class="footer-copy">
-                Lobo. Alguns direitos reservados
+                <span class="color"><strong>Mizael</strong></span>. Alguns direitos reservados
             </p>
         </div>
     </footer>
 
 </body>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
 </html>
