--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
             <h1>Desenvolvedor<br>Back End | Front End</h1>
             <div>
-                <p>Prazer me chamo <span class="color"><strong>Mizael</strong></span> e sou <span class="typing"></span>
+                <p>Prazer me chamo <span class="color"><strong>Mizael</strong></span><br> e sou <span class="typing"></span>
                 </p>
             </div>    
         </div>
